2008-01-28  Sebastien Pouliot  <sebastien@ximian.com> 

	* rules.xml: In default only exclude NullDerefRule from Correctness
	and stop excluding ToStringReturnsNullRule from BadPractice. In 
	mono-bcl include everything except MethodCanBeMadeStaticRule and 
	NullDerefRule from Correctness and exclude MonoCompatibilityReviewRule
	from Portability.

2008-01-02  Sebastien Pouliot  <sebastien@ximian.com> 

	* rules.mds, tests.mds: Add Gendarme.Rules.Interoperability to
	MonoDevelop solution files.
	* rules.xml: Add Gendarme.Rules.Interoperability rules

2007-12-30  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add Gendarme.Rules.Interoperability to the build.

2007-12-16  Sebastien Pouliot  <sebastien@ximian.com>

	* rules.xml: Added Correctness rules (except NullDeRef) to 
	"self-test". Renamed monoBCL to mono-bcl to avoid mixed cases.
	Re-active AvoidUninstantiatedInternalClassesRule in default.

2007-11-29  Sebastien Pouliot  <sebastien@ximian.com>

	* rules.xml: Add a new "self-test" set used for testing Gendarme 
	itself

2007-11-18  Nestor Salceda  <nestor.salceda@gmail.com>

	* rules.xml: Added ToStringReturnsNullRule to the profiles, because the
	bug has been fixed.

2007-10-19  Nestor Salceda  <nestor.salceda@gmail.com>

	* rules.xml: Update with the profiles page in the group.  There are 2
	rules deactivated because I should deal with and fix some bugs.

2007-10-15  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* rules.xml: Added the design and badpractice rulesets.

2007-10-09  Nestor Salceda  <nestor.salceda@gmail.com>

	* rules.md-nunit: Fix the path for Test.Rules.BadDesign.dll assembly in
	the unit tests.

2007-10-09  Nestor Salceda  <nestor.salceda@gmail.com>

	* rules.md-nunit: Update unit tests to load assemblies in ../bin
	directory.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add Gendarme.Rules.BadPractice to the build

2007-09-26  Nestor Salceda  <nestor.salceda@gmail.com>
	